# dimension

./: Cargo.toml  README.md
benches/: score.rs
src/: lib.rs  main.rs  permutations.rs
