[package]
name = "dimension"
version = "0.1.0"
authors = ["Trevor McCulloch <mccullocht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
structopt = "0.3.25"

[dev-dependencies]
criterion = "0.3.5"
pprof = { version = "0.5.0", features = ["criterion", "flamegraph", "protobuf"] }

[profile.bench.build-override]
debug = 1

[[bench]]
name = "score"
harness = false